# arablocal

./: .gitignore  README.md  arablocal.spec  build.bat  export.csv  proxies.txt  proxies.txt.example  proxy_tester.py  pyproject.toml  requirements.txt  scrapper.py  scrapper_v2_backup.py  skills-lock.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
core/: __init__.py  config.py  cookie_manager.py  delay.py  discovery.py  engine.py  extraction.py  proxy_health.py  storage.py  updater.py
gui/: __init__.py  app.py  bootstrap.py  main_window.py  theme.py  update_dialog.py  workers.py
gui/pages/: __init__.py  dashboard_page.py  proxy_page.py  results_page.py  scrape_page.py
output/categories/: access_platform.csv  accessory.csv  accomodation.csv  accounting.csv  acoustical_consultants.csv  activities_fireworks.csv  advertising.csv  advertising_marketing_services.csv  air_conditioning.csv  atm.csv  automotive.csv  beauty_and_personal_care.csv  business_b2b.csv  cafeterias.csv  companies_industries.csv  contractors.csv  dealers_distributors_manufacturers.csv  fitness.csv  food_b2b.csv  handy_man.csv  health_care.csv  industrial.csv  logistics.csv  restaurants.csv  schools.csv  travel.csv
output/kw/: kw_all.csv  kw_raw.csv  (+1 more)
scrapped/: access_platform.csv  accessory.csv  accomodation.csv  arablocal_all copy.csv  arablocal_all.csv  arablocal_raw copy.csv  arablocal_raw.csv  arablocal_staging copy.db  arablocal_staging.db  business_b2b copy.csv  business_b2b.csv  construction.csv  health_care.csv  industrial copy.csv  industrial.csv  restaurants.csv
(+82 files in other folders)
