[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arablocal-scraper"
version = "4.1.0"
description = "Multi-country business listing scraper for ArabLocal.com"
requires-python = ">=3.10"
dependencies = [
    "scrapling[fetchers]>=0.10,<1.0",
    "PyQt6>=6.6,<7.0",
    "rich>=13.0,<14.0",
    "openpyxl>=3.1,<4.0",
]

[project.scripts]
arablocal = "scrapper:main"
arablocal-gui = "gui.app:main"

[tool.setuptools.packages.find]
include = ["core*", "gui*"]
